ENH: Notebook bone morphometry

--- a/examples/MouseFemurMicroCT.ipynb
+++ b/examples/MouseFemurMicroCT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,16 +600,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3min 51s, sys: 4.5 s, total: 3min 56s\n",
+      "Wall time: 50.5 s\n"
+     ]
+    }
+   ],
    "source": [
-    "registered_atlas, transform_parameter_object = itk.elastix_registration_method(input_masked_cropped_f, atlas_affine_transformed_f)"
+    "%time registered_atlas, transform_parameter_object = itk.elastix_registration_method(input_masked_cropped_f, atlas_affine_transformed_f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,18 +627,18 @@
     "transformer.SetTransformParameterObject(transform_parameter_object)\n",
     "transformer.Update()\n",
     "transformed = transformer.GetOutput()\n",
-    "transformed_cast = itk.cast_image_filter(transformed, ttype=(type(transformed), it))"
+    "transformed_cast = itk.cast_image_filter(transformed, ttype=(type(transformed), itk.Image[itk.UC, 3]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42c279e5fdf442d3b650d266f92eee46",
+       "model_id": "54c6036785794b1a82beedd08c4cbe9f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -642,7 +651,7 @@
     }
    ],
    "source": [
-    "registered = view(input_masked_cropped,\n",
+    "registered = view(input_masked_cropped_f,\n",
     "                  label_image=transformed_cast,\n",
     "                  label_image_blend=0.7,\n",
     "                  cmap=cm.bone,\n",
@@ -653,13 +662,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "weights = np.ones((10,), dtype=np.float32)*0.1\n",
     "weights[5] = 1.0\n",
     "registered.label_image_weights = weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "morphometry_filter = itk.BoneMorphometryFeaturesFilter.New(input_masked_cropped_f)\n",
+    "morphometry_filter.SetMaskImage(transformed_cast)\n",
+    "morphometry_filter.Update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BVTV 0.8232324208271017\n",
+      "TbN 6.803731831838115\n",
+      "TbTh 0.12099718818645663\n",
+      "TbSp 0.025980973904014423\n",
+      "BSBV 16.529309730057534\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('BVTV', morphometry_filter.GetBVTV())\n",
+    "print('TbN', morphometry_filter.GetTbN())\n",
+    "print('TbTh', morphometry_filter.GetTbTh())\n",
+    "print('TbSp', morphometry_filter.GetTbSp())\n",
+    "print('BSBV', morphometry_filter.GetBSBV())"
    ]
   },
   {
