ENH: Notebook enhancements

--- a/examples/MouseFemurMicroCT.ipynb
+++ b/examples/MouseFemurMicroCT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -48,12 +48,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef5c425782bd48d6b8a55623e4ad03c2",
+       "model_id": "acba6aa0ae244309ac2cb57c8dbabb14",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Viewer(background=(0.6, 0.6, 0.6), camera=array([[-2.4597874 , 19.208582  , 45.884567  ],\n",
+       "Viewer(background=(0.6, 0.6, 0.6), camera=array([[-8.23076   , 16.761303  , 41.647186  ],\n",
        "       [ 4.855     ,…"
       ]
      },
@@ -62,12 +62,9 @@
     }
    ],
    "source": [
-    "camera = np.array([[-7.028664  , 20.177433  , 45.209637  ],\n",
-    "       [ 4.8549995 ,  9.24      , 48.065998  ],\n",
-    "       [-0.17604062,  0.06524051,  0.9822186 ]], dtype=np.float32)\n",
-    "camera = np.array([[-2.4597874 , 19.208582  , 45.884567  ],\n",
+    "camera = np.array([[-8.23076   , 16.761303  , 41.647186  ],\n",
     "       [ 4.855     ,  9.24      , 48.065998  ],\n",
-    "       [-0.22125234,  0.05076638,  0.97389436]], dtype=np.float32)\n",
+    "       [ 0.3404956 , -0.19294305, -0.92023677]], dtype=np.float32)\n",
     "opacity_gaussians = [[{'position': 0.23888888888888893,\n",
     "   'height': 0.3090909090909091,\n",
     "   'width': 0.1722222222222221,\n",
@@ -86,13 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "477f315e0226462ea9915aa7ab8f6bf5",
+       "model_id": "b0192ae2d00848fa934835b618650b37",
        "version_major": 2,
        "version_minor": 0
       },
@@ -119,9 +116,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "itkPointSetD3 not loaded from module ITKRegistrationCommon because of exception:\n",
+      " module 'itk.ITKRegistrationCommonPython' has no attribute 'itkPointSetD3'\n",
+      "Template itk::LandmarkAtlasSegmentationFilter<itk::Image<signedshort,3>,itk::Image<signedshort,3>>\n",
+      " already defined as <class 'itk.itkLandmarkAtlasSegmentationFilterPython.itkLandmarkAtlasSegmentationFilterISS3ISS3'>\n",
+      " is redefined as <class 'itk.itkLandmarkAtlasSegmentationFilterPython.itkLandmarkAtlasSegmentationFilterISS3ISS3'>\n",
+      "Warning: template already defined 'itk::LandmarkAtlasSegmentationFilter<itk::Image<signedshort,3>,itk::Image<signedshort,3>>'\n"
+     ]
+    }
+   ],
    "source": [
     "bone_segmenter = itk.SegmentBonesInMicroCTFilter.New(image)\n",
     "cortical_thickness=0.1\n",
@@ -139,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,18 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f28765c6c6244b439541596628d05a91",
+       "model_id": "9324dbdc9beb424b87b9d6ca7ab9ce85",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Viewer(background=(0.6, 0.6, 0.6), camera=array([[-2.4597874 , 19.208582  , 45.884567  ],\n",
+       "Viewer(background=(0.6, 0.6, 0.6), camera=array([[-8.23076   , 16.761303  , 41.647186  ],\n",
        "       [ 4.855     ,…"
       ]
      },
@@ -183,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,18 +238,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cdb57129d994e70a73e531aa195e954",
+       "model_id": "6d5067c4b1054dc0b6526a5a599ea148",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Viewer(background=(0.6, 0.6, 0.6), cmap=['bone_Matlab'], geometries=[], gradient_opacity=1.0, opacity_gaussian…"
+       "Viewer(background=(0.6, 0.6, 0.6), camera=array([[-8.23076   , 16.761303  , 41.647186  ],\n",
+       "       [ 4.855     ,…"
       ]
      },
      "metadata": {},
@@ -257,29 +268,34 @@
     "   'xBias': 0.51,\n",
     "   'yBias': 0.4}]]\n",
     "view(atlas,\n",
+    "     #label_image=atlas_label,\n",
     "     gradient_opacity=1.0,\n",
     "     background=(0.6,0.6,0.6),\n",
     "     cmap='bone_Matlab',\n",
+    "     camera=camera,\n",
+    "     label_image_blend=0.4,\n",
     "     opacity_gaussians=opacity_gaussians,\n",
     "     point_set_sizes=[15,]*3,\n",
+    "     ui_collapsed=True,\n",
     "     point_set_representations=['spheres',]*3,\n",
     "     point_sets=[center_of_femur_head, femur_shaft, dent])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d321d2fd52d493dba4ddc27d3ae59c2",
+       "model_id": "3bbac412e0b84989ba09c0653f32b7b7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Viewer(background=(0.6, 0.6, 0.6), cmap=['bone_Matlab'], geometries=[], gradient_opacity=1.0, opacity_gaussian…"
+       "Viewer(background=(0.6, 0.6, 0.6), camera=array([[-8.23076   , 16.761303  , 41.647186  ],\n",
+       "       [ 4.855     ,…"
       ]
      },
      "metadata": {},
@@ -300,6 +316,7 @@
     "     gradient_opacity=1.0,\n",
     "     background=(0.6,0.6,0.6),\n",
     "     cmap='bone_Matlab',\n",
+    "     camera=camera,\n",
     "     opacity_gaussians=opacity_gaussians,\n",
     "     point_set_sizes=[15,]*3,\n",
     "     point_set_representations=['spheres',]*3,\n",
@@ -309,13 +326,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bdd0351d9e447e39cf44ddad99e4665",
+       "model_id": "0fb7e154557b4ed68bac29748b3b0a19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -394,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,15 +445,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 45.4 s, sys: 1.41 s, total: 46.8 s\n",
-      "Wall time: 10.7 s\n"
+      "CPU times: user 44.6 s, sys: 6.34 s, total: 50.9 s\n",
+      "Wall time: 12.6 s\n"
      ]
     }
    ],
@@ -446,18 +463,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "064d1d70f9784c378231e436f4143724",
+       "model_id": "cb660df12ce849f0af5e2b4f86431674",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Viewer(geometries=[], gradient_opacity=0.22, interpolation=False, point_sets=[], rendered_image=<itk.itkImageP…"
+       "Viewer(background=(0.6, 0.6, 0.6), camera=array([[-8.23076   , 16.761303  , 41.647186  ],\n",
+       "       [ 4.855     ,…"
       ]
      },
      "metadata": {},
@@ -465,12 +483,18 @@
     }
    ],
    "source": [
-    "view(image=image, label_image=landmark_registration.GetOutput())"
+    "view(image=image,\n",
+    "     cmap=cm.bone,\n",
+    "     camera=camera,\n",
+    "     gradient_opacity=1.0,\n",
+    "     background=(0.6,0.6,0.6),\n",
+    "     opacity_gaussians=opacity_gaussians,\n",
+    "     label_image=landmark_registration.GetOutput())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,40 +541,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_masked_cropped = itk.extract_image_filter(input_masked,\n",
-    "                                                extraction_region=label_masked_cropped.GetLargestPossibleRegion())\n",
-    "# view(input_masked_cropped, label_image=label_masked_cropped)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ceb9c5b605a041d5b67d54c2a9c19125",
+       "model_id": "e5979f5403a6486da2d1eed120742620",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Viewer(geometries=[], gradient_opacity=0.22, interpolation=False, point_sets=[], rendered_image=<itk.itkImageP…"
+       "Viewer(background=(0.6, 0.6, 0.6), camera=array([[-8.23076   , 16.761303  , 41.647186  ],\n",
+       "       [ 4.855     ,…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "input_masked_cropped = itk.extract_image_filter(input_masked,\n",
+    "                                                extraction_region=label_masked_cropped.GetLargestPossibleRegion())\n",
+    "view(input_masked_cropped,\n",
+    "     label_image=label_masked_cropped,\n",
+    "     cmap=cm.bone,\n",
+    "     camera=camera,\n",
+    "     gradient_opacity=1.0,\n",
+    "     background=(0.6,0.6,0.6),\n",
+    "     opacity_gaussians=opacity_gaussians\n",
+    "     )"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,19 +602,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "563407adb73540d08b178f418f19a2d4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Viewer(background=(0.6, 0.6, 0.6), camera=array([[-8.23076   , 16.761303  , 41.647186  ],\n",
+       "       [ 4.855     ,…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "itk.imwrite(input_masked_cropped, file_name + '-input-masked-cropped.nrrd')\n",
     "itk.imwrite(atlas_affine_transformed, file_name + '-atlas-affine-transformed.nrrd')\n",
     "itk.imwrite(atlas_labels_affine_transformed, file_name + '-atlas-labels-affine-transformed.nrrd')\n",
-    "# view(atlas_affine_transformed, label_image=atlas_labels_affine_transformed)"
+    "view(atlas_affine_transformed,\n",
+    "     label_image=atlas_labels_affine_transformed,\n",
+    "     cmap=cm.bone,\n",
+    "     camera=camera,\n",
+    "     gradient_opacity=1.0,\n",
+    "     background=(0.6,0.6,0.6),\n",
+    "     opacity_gaussians=opacity_gaussians\n",
+    "     )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,15 +648,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 51s, sys: 4.5 s, total: 3min 56s\n",
-      "Wall time: 50.5 s\n"
+      "CPU times: user 3min 37s, sys: 5.79 s, total: 3min 43s\n",
+      "Wall time: 49.3 s\n"
      ]
     }
    ],
@@ -618,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,18 +680,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54c6036785794b1a82beedd08c4cbe9f",
+       "model_id": "34e7066ba7b043c2842c4f077e49772e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Viewer(cmap=['bone_Matlab'], geometries=[], gradient_opacity=0.22, interpolation=False, label_image_blend=0.7,…"
+       "Viewer(background=(0.6, 0.6, 0.6), camera=array([[-8.23076   , 16.761303  , 41.647186  ],\n",
+       "       [ 4.855     ,…"
       ]
      },
      "metadata": {},
@@ -651,10 +700,19 @@
     }
    ],
    "source": [
+    "opacity_gaussians = [[{'position': 0.5,\n",
+    "   'height': 0.5636363636363637,\n",
+    "   'width': 0.5,\n",
+    "   'xBias': 0.026666666666666672,\n",
+    "   'yBias': 0}]]\n",
     "registered = view(input_masked_cropped_f,\n",
     "                  label_image=transformed_cast,\n",
     "                  label_image_blend=0.7,\n",
+    "                  camera=camera,\n",
+    "                  gradient_opacity=1.0,\n",
+    "                  background=(0.6,0.6,0.6),\n",
     "                  cmap=cm.bone,\n",
+    "                  opacity_gaussians=opacity_gaussians,\n",
     "                  ui_collapsed=True,\n",
     "                  )\n",
     "registered"
@@ -662,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
