BUG: Only compute morphometry features in metaphysis ROI

--- a/examples/MouseFemurMicroCT.ipynb
+++ b/examples/MouseFemurMicroCT.ipynb
@@ -731,29 +731,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roi = itk.mask_negated_image_filter(transformed_cast, mask_image=transformed_cast, masking_value=5)\n",
+    "# view(label_image=roi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "morphometry_filter = itk.BoneMorphometryFeaturesFilter.New(input_masked_cropped_f)\n",
-    "morphometry_filter.SetMaskImage(transformed_cast)\n",
+    "morphometry_filter.SetMaskImage(roi)\n",
     "morphometry_filter.Update()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BVTV 0.8232324208271017\n",
-      "TbN 6.803731831838115\n",
-      "TbTh 0.12099718818645663\n",
-      "TbSp 0.025980973904014423\n",
-      "BSBV 16.529309730057534\n"
+      "BVTV 0.7600745916651215\n",
+      "TbN 15.203703884426831\n",
+      "TbTh 0.049992725288715116\n",
+      "TbSp 0.015780720945284547\n",
+      "BSBV 40.00582061589391\n"
      ]
     }
    ],
