--- a/examples/MouseFemurMicroCTApp.ipynb
+++ b/examples/MouseFemurMicroCTApp.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "import numpy as np\n",
     "\n",
     "from itkwidgets import view, cm\n",
-    "from ipywidgets import FloatProgress, Label, HBox, VBox, FloatText, ColorPicker, Button"
+    "from ipywidgets import FloatProgress, Label, HBox, VBox, FloatText, ColorPicker, Button, Select, Text, Tab"
    ]
   },
   {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,16 +52,100 @@
     "   'width': 0.1722222222222221,\n",
     "   'xBias': 0.04708953460902432,\n",
     "   'yBias': 0}]]\n",
-    "cmap = cm.bone"
+    "cmap = cm.bone\n",
+    "gradient_opacity = 1.0\n",
+    "background = (0.6,0.6,0.6)\n",
+    "ui_collapsed = True\n",
+    "\n",
+    "viewer_kwargs = { 'camera': camera,\n",
+    "                  'opacity_gaussians': opacity_gaussians,\n",
+    "                  'cmap': cmap,\n",
+    "                  'gradient_opacity': gradient_opacity,\n",
+    "                  'background': background,\n",
+    "                  'ui_collapsed': ui_collapsed }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9bd4940eb0f34787a3a58099dad3b712",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Select(options=('input_images/901-L.nrrd', 'input_images/907-L.nrrd'), value='input_images/901-…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Select input tab\n",
+    "selected_input_path = None\n",
+    "selected_input_image = None\n",
+    "\n",
+    "input_images_paths = [str(ii) for ii in inputs_images_dir.glob('*')]\n",
+    "input_images_paths.sort()\n",
+    "selected_input_path = input_images_paths[0]\n",
+    "selected_input_image = itk.imread(selected_input_path)\n",
+    "input_select_widget = Select(options=input_images_paths, value=selected_input_path)\n",
+    "\n",
+    "input_viewer = view(image=selected_input_image, **viewer_kwargs)\n",
+    "\n",
+    "def on_input_select(change):\n",
+    "    selected_input_path = change.new\n",
+    "    image = itk.imread(change.new)\n",
+    "    selected_input_image = image\n",
+    "    input_viewer.image = image\n",
+    "    # input_viewer.reset_roi()\n",
+    "    \n",
+    "input_select_widget.observe(on_input_select, ['value'])\n",
+    "input_select_box = HBox([input_select_widget, input_viewer])\n",
+    "# input_select_box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2f236b9430d6456bbf2b16aee82f77d6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Tab(children=(HBox(children=(Select(index=1, options=('input_images/901-L.nrrd', 'input_images/907-L.nrrd'), v…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "image = itk.imread(file_name)"
+    "tab_names = ['Select input',]\n",
+    "tab_children = [input_select_box,]\n",
+    "\n",
+    "tab_widget = Tab()\n",
+    "tab_widget.children = tab_children\n",
+    "for ii, name in enumerate(tab_names):\n",
+    "    tab_widget.set_title(ii, name)\n",
+    "tab_widget"
    ]
   },
   {
