ENH: Registration app

--- a/examples/MouseFemurMicroCTApp.ipynb
+++ b/examples/MouseFemurMicroCTApp.ipynb
@@ -21,7 +21,9 @@
     "import numpy as np\n",
     "\n",
     "from itkwidgets import view, cm\n",
-    "from ipywidgets import FloatProgress, Label, HBox, VBox, FloatText, ColorPicker, Button, Select, Text, Tab"
+    "from ipywidgets import FloatProgress, Label, HBox, VBox, FloatText, ColorPicker, Button, Select, Text, Tab, Output\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -322,6 +324,8 @@
     "\n",
     "landmark_registration_widget = VBox([landmark_registration_button, landmark_registration_viewer])\n",
     "\n",
+    "roi_label = None\n",
+    "roi_input_masked_cropped = None\n",
     "def run_landmark_registration(change):\n",
     "    image = selected_input_image\n",
     "    label_image = itk.imread(segment_bones_path)\n",
@@ -347,8 +351,89 @@
     "    landmark_registration_button.button_style = 'info'\n",
     "    landmark_registration.Update()\n",
     "    label_image = landmark_registration.GetOutput()\n",
-    "    viewer = view(image=selected_input_image, label_image=label_image, **viewer_kwargs)\n",
+    "    opacity_gaussians_reg = [[{'position': 0.5,\n",
+    "       'height': 0.5636363636363637,\n",
+    "       'width': 0.5,\n",
+    "       'xBias': 0.026666666666666672,\n",
+    "       'yBias': 0}]]\n",
+    "    viewer = view(image=selected_input_image,\n",
+    "                  label_image=label_image,\n",
+    "                  opacity_gaussians=opacity_gaussians_reg,\n",
+    "                  cmap=cmap,\n",
+    "                  gradient_opacity=gradient_opacity,\n",
+    "                  background=background,\n",
+    "                  ui_collapsed=ui_collapsed)\n",
     "    landmark_registration_widget.children = [landmark_registration_button, viewer]\n",
+    "    \n",
+    "    input_masked_trabecular = itk.mask_negated_image_filter(image, mask_image=label_image, masking_value=2)\n",
+    "    input_masked_cancellous = itk.mask_negated_image_filter(image, mask_image=label_image, masking_value=1)\n",
+    "    input_masked = itk.add_image_filter(input_masked_trabecular, input_masked_cancellous)\n",
+    "    del input_masked_trabecular\n",
+    "    del input_masked_cancellous\n",
+    "    \n",
+    "    atlas_masked = itk.mask_image_filter(atlas, mask_image=atlas_label, masking_value=0)\n",
+    "    \n",
+    "    label_masked_trabecular = itk.mask_negated_image_filter(label_image, mask_image=label_image, masking_value=2)\n",
+    "    label_masked_cancellous = itk.mask_negated_image_filter(label_image, mask_image=label_image, masking_value=1)\n",
+    "    label_masked = itk.add_image_filter(label_masked_trabecular, label_masked_cancellous)\n",
+    "    label_masked = itk.cast_image_filter(label_masked, ttype=(type(label_masked), itk.Image[itk.UC, 3]))\n",
+    "    del label_masked_trabecular\n",
+    "    del label_masked_cancellous\n",
+    "    \n",
+    "    label_masked_map = itk.label_image_to_label_map_filter(label_masked)\n",
+    "    cropped = itk.auto_crop_label_map_filter(label_masked_map, crop_border=[6,]*3)\n",
+    "    label_masked_cropped = itk.label_map_to_label_image_filter(cropped)\n",
+    "    \n",
+    "    input_masked_cropped = itk.extract_image_filter(input_masked,\n",
+    "                                                extraction_region=label_masked_cropped.GetLargestPossibleRegion())\n",
+    "    \n",
+    "    transform = landmark_registration.GetFinalTransform()\n",
+    "    atlas_affine_transformed = itk.resample_image_filter(atlas_masked,\n",
+    "                                                     use_reference_image=True,\n",
+    "                                                     reference_image=input_masked_cropped,\n",
+    "                                                     transform=transform)\n",
+    "    \n",
+    "    nearest_interpolator = itk.NearestNeighborInterpolateImageFunction.New(atlas_label)\n",
+    "    atlas_labels_affine_transformed = itk.resample_image_filter(atlas_label,\n",
+    "                                                            use_reference_image=True,\n",
+    "                                                            reference_image=input_masked_cropped,\n",
+    "                                                            transform=transform,\n",
+    "                                                            interpolator=nearest_interpolator)\n",
+    "    \n",
+    "    itk.imwrite(input_masked_cropped, str(output_images_dir / Path(Path(selected_input_path).name + '-input-masked-cropped.nrrd')))\n",
+    "    itk.imwrite(atlas_affine_transformed, str(output_images_dir / Path(Path(selected_input_path).name + '-atlas-affine-transformed.nrrd')))\n",
+    "    itk.imwrite(atlas_labels_affine_transformed, str(output_images_dir / Path(Path(selected_input_path).name + '-atlas-labels-affine-transformed.nrrd')))\n",
+    "                \n",
+    "    input_masked_cropped_f = itk.imread(str(output_images_dir / Path(Path(selected_input_path).name + '-input-masked-cropped.nrrd')), itk.F)\n",
+    "    roi_input_masked_cropped = input_masked_cropped_f                                    \n",
+    "    atlas_affine_transformed_f = itk.imread(str(output_images_dir / Path(Path(selected_input_path).name + '-atlas-affine-transformed.nrrd')), itk.F)\n",
+    "    atlas_labels_affine_transformed_f = itk.imread(str(output_images_dir / Path(Path(selected_input_path).name + '-atlas-labels-affine-transformed.nrrd')), itk.F)\n",
+    "                                        \n",
+    "    registered_atlas, transform_parameter_object = itk.elastix_registration_method(input_masked_cropped_f, atlas_affine_transformed_f) \n",
+    "    \n",
+    "    transformer = itk.TransformixFilter[type(atlas_labels_affine_transformed_f)].New()\n",
+    "    transformer.SetMovingImage(atlas_labels_affine_transformed_f)\n",
+    "    transformer.SetTransformParameterObject(transform_parameter_object)\n",
+    "    transformer.Update()\n",
+    "    transformed = transformer.GetOutput()\n",
+    "    transformed_cast = itk.cast_image_filter(transformed, ttype=(type(transformed), itk.Image[itk.UC, 3]))\n",
+    "                                                   \n",
+    "    #viewer.image = input_masked_cropped_f\n",
+    "    #viewer.label_image=transformed_cast\n",
+    "    #viewer.label_image_blend=0.7\n",
+    "    viewer = view(image=input_masked_cropped_f,\n",
+    "              label_image=transformed_cast,\n",
+    "              opacity_gaussians=opacity_gaussians_reg,\n",
+    "              cmap=cmap,\n",
+    "              label_image_blend=0.7,\n",
+    "              gradient_opacity=gradient_opacity,\n",
+    "              background=background,\n",
+    "              ui_collapsed=ui_collapsed)\n",
+    "    landmark_registration_widget.children = [landmark_registration_button, viewer]\n",
+    "                                                   \n",
+    "    roi_label = itk.mask_negated_image_filter(transformed_cast, mask_image=transformed_cast, masking_value=5)\n",
+    "    itk.imwrite(roi_label, str(output_images_dir / Path(Path(selected_input_path).name + '-roi-label.nrrd')))\n",
+    "                                                   \n",
     "    landmark_registration_button.button_style = 'success'\n",
     "    \n",
     "landmark_registration_button.on_click(run_landmark_registration)\n",
@@ -358,6 +443,16 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Morphometry tab\n",
+    "morphometry_output = Output()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -365,7 +460,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a8ac682117c471f8b4cf65f736d3b8f",
+       "model_id": "efc3da47f9c24dbd9259879bc13f4404",
        "version_major": 2,
        "version_minor": 0
       },
@@ -393,11 +488,13 @@
     "tab_names = ['Select input',\n",
     "             'Segment bones',\n",
     "             'Select landmarks',\n",
-    "             'Landmark registration']\n",
+    "             'Registration',\n",
+    "             'Morphometry']\n",
     "tab_children = [input_select_box,\n",
     "                segment_bones_vbox,\n",
     "                select_landmark_widget,\n",
-    "                landmark_registration_widget]\n",
+    "                landmark_registration_widget,\n",
+    "                morphometry_output]\n",
     "\n",
     "tab_widget = Tab()\n",
     "tab_widget.children = tab_children\n",
@@ -408,52 +505,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Deformation tab\n",
-    "\n",
-    "input_masked_trabecular = itk.mask_negated_image_filter(image, mask_image=label_image, masking_value=2)\n",
-    "input_masked_cancellous = itk.mask_negated_image_filter(image, mask_image=label_image, masking_value=1)\n",
-    "input_masked = itk.add_image_filter(input_masked_trabecular, input_masked_cancellous)\n",
-    "del input_masked_trabecular\n",
-    "del input_masked_cancellous"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "atlas_masked = itk.mask_image_filter(atlas, mask_image=atlas_label, masking_value=0)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "label_masked_trabecular = itk.mask_negated_image_filter(label_image, mask_image=label_image, masking_value=2)\n",
-    "label_masked_cancellous = itk.mask_negated_image_filter(label_image, mask_image=label_image, masking_value=1)\n",
-    "label_masked = itk.add_image_filter(label_masked_trabecular, label_masked_cancellous)\n",
-    "label_masked = itk.cast_image_filter(label_masked, ttype=(type(label_masked), itk.Image[itk.UC, 3]))\n",
-    "del label_masked_trabecular\n",
-    "del label_masked_cancellous"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "label_masked_map = itk.label_image_to_label_map_filter(label_masked)\n",
-    "cropped = itk.auto_crop_label_map_filter(label_masked_map, crop_border=[6,]*3)\n",
-    "label_masked_cropped = itk.label_map_to_label_image_filter(cropped)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -477,8 +546,7 @@
     }
    ],
    "source": [
-    "input_masked_cropped = itk.extract_image_filter(input_masked,\n",
-    "                                                extraction_region=label_masked_cropped.GetLargestPossibleRegion())\n",
+    "\n",
     "view(input_masked_cropped,\n",
     "     label_image=label_masked_cropped,\n",
     "     cmap=cm.bone,\n",
@@ -494,27 +562,14 @@
    "execution_count": 52,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "transform = landmark_registration.GetFinalTransform()\n",
-    "atlas_affine_transformed = itk.resample_image_filter(atlas_masked,\n",
-    "                                                     use_reference_image=True,\n",
-    "                                                     reference_image=input_masked_cropped,\n",
-    "                                                     transform=transform)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "nearest_interpolator = itk.NearestNeighborInterpolateImageFunction.New(atlas_label)\n",
-    "atlas_labels_affine_transformed = itk.resample_image_filter(atlas_label,\n",
-    "                                                            use_reference_image=True,\n",
-    "                                                            reference_image=input_masked_cropped,\n",
-    "                                                            transform=transform,\n",
-    "                                                            interpolator=nearest_interpolator)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -538,9 +593,7 @@
     }
    ],
    "source": [
-    "itk.imwrite(input_masked_cropped, file_name + '-input-masked-cropped.nrrd')\n",
-    "itk.imwrite(atlas_affine_transformed, file_name + '-atlas-affine-transformed.nrrd')\n",
-    "itk.imwrite(atlas_labels_affine_transformed, file_name + '-atlas-labels-affine-transformed.nrrd')\n",
+    "\n",
     "view(atlas_affine_transformed,\n",
     "     label_image=atlas_labels_affine_transformed,\n",
     "     cmap=cm.bone,\n",
@@ -577,7 +630,7 @@
     }
    ],
    "source": [
-    "%time registered_atlas, transform_parameter_object = itk.elastix_registration_method(input_masked_cropped_f, atlas_affine_transformed_f)"
+    "%time "
    ]
   },
   {
@@ -585,14 +638,7 @@
    "execution_count": 58,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "transformer = itk.TransformixFilter[type(atlas_labels_affine_transformed_f)].New()\n",
-    "transformer.SetMovingImage(atlas_labels_affine_transformed_f)\n",
-    "transformer.SetTransformParameterObject(transform_parameter_object)\n",
-    "transformer.Update()\n",
-    "transformed = transformer.GetOutput()\n",
-    "transformed_cast = itk.cast_image_filter(transformed, ttype=(type(transformed), itk.Image[itk.UC, 3]))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -616,11 +662,7 @@
     }
    ],
    "source": [
-    "opacity_gaussians = [[{'position': 0.5,\n",
-    "   'height': 0.5636363636363637,\n",
-    "   'width': 0.5,\n",
-    "   'xBias': 0.026666666666666672,\n",
-    "   'yBias': 0}]]\n",
+    "\n",
     "registered = view(input_masked_cropped_f,\n",
     "                  label_image=transformed_cast,\n",
     "                  label_image_blend=0.7,\n",
